--- a/WebPage/vinos_page/static/css/base.css
+++ b/WebPage/vinos_page/static/css/base.css
@@ -7,6 +7,7 @@ header h1 a{
 body { 
     font-family: 'Source Sans Pro', sans-serif; 
     font-size: 18px;
+
 }
 
 header { 
@@ -24,7 +25,7 @@ header {
 
 .post-entry h2 a, 
 .post-entry h2 a:visited { 
-    color: blue; 
+    color: green; 
     text-decoration: none; 
 }
 
