--- a/WebPage/vinos_page/static/css/base.css
+++ b/WebPage/vinos_page/static/css/base.css
@@ -25,7 +25,7 @@ header {
 
 .post-entry h2 a, 
 .post-entry h2 a:visited { 
-    color: gray; 
+    color: black; 
     text-decoration: none; 
 }
 
