--- a/WebPage/vinos_page/templates/base.html
+++ b/WebPage/vinos_page/templates/base.html
@@ -8,7 +8,7 @@
   <body> 
     <header> 
         <h1>
-            <a href="{% url 'home' %}">Django blog</a>
+            <a href="{% url 'home' %}">Red Vine</a>
         </h1> 
     </header>
         <div> {% block content %} {% endblock content %} </div> 
