--- a/WebPage/vinos_page/templates/home.html
+++ b/WebPage/vinos_page/templates/home.html
@@ -4,8 +4,8 @@
     <h1> Productos </h1>
     {%for agregar in lista_de_agregar %}
         <div class = "post-entry">
-        <h2><a href = "">{{agregar.titulo}}</a></h2>
-        <p>{{agregar.text}}</p>
+        <h2><a href = "{% url 'post_detail' agregar.pk %}">{{agregar.titulo}}</a></h2>
+        <!--<p>{{agregar.text}}</p>-->
         </div>
     {% endfor %}
 {% endblock content %}}
